--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mauscheln Simulation</title>
+    <title>Kratzen Online</title>
     <link rel="stylesheet" href="style.css">
     <!-- Basic styling for simulation container is in style.css -->
 </head>
