--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,11 +32,13 @@
     </div>
 
     <div id="controls">
+        <!-- NEW: Hide Cards Toggle Button -->
+        <button id="hide-cards-toggle" style="margin-right: 10px;">Toggle Card Visibility</button>
         <label style="margin-right: 10px;">
             <input type="checkbox" id="manual-mode-toggle"> Manual Mode
         </label>
         <button id="next-step">Next Step</button>
-        <!-- NEW: Animation Speed Slider -->
+        <!-- Animation Speed Slider -->
         <label for="animation-speed-slider" style="margin-left: 20px; margin-right: 5px;">Animation Speed:</label>
         <input type="range" id="animation-speed-slider" min="0.1" max="1.5" step="0.1" value="0.2">
         <span id="animation-speed-value" style="width: 30px; display: inline-block; text-align: right;">0.5s</span>
