--- a/index.html
+++ b/index.html
@@ -32,24 +32,24 @@
     </div>
 
     <div id="controls">
-        <!-- NEW: Hide Cards Toggle Button -->
         <button id="hide-cards-toggle" style="margin-right: 10px;">Toggle Card Visibility</button>
         <label style="margin-right: 10px;">
             <input type="checkbox" id="manual-mode-toggle"> Manual Mode
         </label>
         <button id="next-step">Next Step</button>
-        <!-- Animation Speed Slider -->
         <label for="animation-speed-slider" style="margin-left: 20px; margin-right: 5px;">Animation Speed:</label>
         <input type="range" id="animation-speed-slider" min="0.1" max="1.5" step="0.1" value="0.2">
         <span id="animation-speed-value" style="width: 30px; display: inline-block; text-align: right;">0.5s</span>
     </div>
 
+    <!-- Container for dynamic bidding and exchange type buttons -->
     <div id="bid-options-container">
-        <!-- Bidding buttons will be added here dynamically -->
+        <!-- Bidding/Exchange type buttons will be added here dynamically -->
     </div>
 
+    <!-- Container for dynamic confirmation buttons (e.g., Confirm Discard, Confirm Exchange) -->
     <div id="manual-action-confirm-container">
-        <!-- Confirmation buttons (e.g., Confirm Discard) appear here -->
+        <!-- Confirmation buttons appear here -->
     </div>
 
     <div id="log-container">
@@ -209,7 +209,6 @@
             <input type="number" id="simulation-games-input" name="numGames" min="1" max="1000000" value="1000" style="width: 80px;">
             <button id="run-simulation-button">Run Simulation</button>
         </div>
-        <!-- NEW: Progress Bar -->
         <div id="simulation-progress-container" style="display: none; margin-top: 10px;">
             <div id="simulation-progress-bar-fill"></div>
             <span id="simulation-progress-text">0%</span>
