card visibility toggle

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div id="controls">
-        <button id="hide-cards-toggle" style="margin-right: 10px;">Alle Karten zeigen</button>
+        <button id="hide-cards-toggle" style="margin-right: 10px;">Karten anzeigen</button>
         <label style="margin-right: 10px;">
             <input type="checkbox" id="manual-mode-toggle" checked> Manual Mode
         </label>
