--- a/index.html
+++ b/index.html
@@ -79,42 +79,23 @@
                     <option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="X" selected>X (10)</option><option value="U">U (Unter)</option><option value="O">O (Ober)</option><option value="K">K (King)</option><option value="A">A (Ace)</option>
                 </select>
             </div>
-            <div class="slider-group">
-                <label for="solo-ace-sneak-chance-slider-p1">Solo Trump Ace Sneak Chance:</label>
-                <input type="range" id="solo-ace-sneak-chance-slider-p1" min="0" max="1" step="0.05" value="0.3">
-                <span class="value-display" id="solo-ace-sneak-chance-value-p1">0.30</span>
-            </div>
+
             <div class="slider-group">
                 <label for="min-trump-oder-mit-select-p1">Min Trump (for Oder Mit w/ Weli & non-Trump Ace):</label>
                 <select id="min-trump-oder-mit-select-p1">
                     <option value="7">7</option><option value="8">8</option><option value="9" selected>9</option><option value="X">X (10)</option><option value="U">U (Unter)</option><option value="O">O (Ober)</option><option value="K">K (King)</option><option value="A">A (Ace)</option>
                 </select>
             </div>
-            <div class="slider-group">
-                <label for="always-sneak-last-no-bid-checkbox-p1">Always Sneak if Last (Solo Ace, No Bids Yet):</label>
-                <input type="checkbox" id="always-sneak-last-no-bid-checkbox-p1" checked>
-            </div>
+
 
             <h5>Bidding Phase 2 (P0):</h5>
             <div class="slider-group">
-                <label for="min-trump-value-play-sneaker-select-p1">Min Trump Value (to Play w/ Sneaker):</label>
-                <select id="min-trump-value-play-sneaker-select-p1">
-                    <option value="7">7</option><option value="8">8</option><option value="9" selected>9</option><option value="X">X (10)</option><option value="U">U (Unter)</option><option value="O">O (Ober)</option><option value="K">K (King)</option><option value="A">A (Ace)</option>
-                </select>
+                <label for="min-hand-value-play-sneaker-slider-p1">Min Hand Value to Play (w/ Sneaker):</label>
+                <input type="range" id="min-hand-value-play-sneaker-slider-p1" min="0" max="20" step="1" value="8">
+                <span class="value-display" id="min-hand-value-play-sneaker-value-p1">8</span>
             </div>
             <div class="slider-group">
-                <label for="low-trump-play-chance-slider-p1">Low Trump Play Chance (w/ Sneaker):</label>
-                <input type="range" id="low-trump-play-chance-slider-p1" min="0" max="1" step="0.05" value="0.3">
-                <span class="value-display" id="low-trump-play-chance-value-p1">0.30</span>
-            </div>
-            <div class="slider-group">
-                <label for="min-suit-value-oder-play-select-p1">Min Suit Value (for Oder Play, 3 suits):</label>
-                <select id="min-suit-value-oder-play-select-p1">
-                    <option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="X">X (10)</option><option value="U" selected>U (Unter)</option><option value="O">O (Ober)</option><option value="K">K (King)</option>
-                </select>
-            </div>
-            <div class="slider-group">
-                <label for="play-if-last-no-one-joined-checkbox-p1">Play if Last (No One Joined Sneaker/Oder):</label>
+                <label for="play-if-last-no-one-joined-checkbox-p1">Force Play if Last (No Partners):</label>
                 <input type="checkbox" id="play-if-last-no-one-joined-checkbox-p1" checked>
             </div>
 
@@ -158,24 +139,12 @@
 
             <h5>Bidding Phase 2 (Others):</h5>
             <div class="slider-group">
-                <label for="min-trump-value-play-sneaker-select-others">Min Trump Value (to Play w/ Sneaker):</label>
-                <select id="min-trump-value-play-sneaker-select-others">
-                    <option value="7">7</option><option value="8">8</option><option value="9" selected>9</option><option value="X">X (10)</option><option value="U">U (Unter)</option><option value="O">O (Ober)</option><option value="K">K (King)</option><option value="A">A (Ace)</option>
-                </select>
+                <label for="min-hand-value-play-sneaker-slider-others">Min Hand Value to Play (w/ Sneaker):</label>
+                <input type="range" id="min-hand-value-play-sneaker-slider-others" min="0" max="20" step="1" value="8">
+                <span class="value-display" id="min-hand-value-play-sneaker-value-others">8</span>
             </div>
             <div class="slider-group">
-                <label for="low-trump-play-chance-slider-others">Low Trump Play Chance (w/ Sneaker):</label>
-                <input type="range" id="low-trump-play-chance-slider-others" min="0" max="1" step="0.05" value="0.3">
-                <span class="value-display" id="low-trump-play-chance-value-others">0.30</span>
-            </div>
-            <div class="slider-group">
-                <label for="min-suit-value-oder-play-select-others">Min Suit Value (for Oder Play, 3 suits):</label>
-                <select id="min-suit-value-oder-play-select-others">
-                    <option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="X">X (10)</option><option value="U" selected>U (Unter)</option><option value="O">O (Ober)</option><option value="K">K (King)</option>
-                </select>
-            </div>
-            <div class="slider-group">
-                <label for="play-if-last-no-one-joined-checkbox-others">Play if Last (No One Joined Sneaker/Oder):</label>
+                <label for="play-if-last-no-one-joined-checkbox-others">Force Play if Last (No Partners):</label>
                 <input type="checkbox" id="play-if-last-no-one-joined-checkbox-others" checked>
             </div>
 
