--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="start-overlay">
         <h1>Kratzen</h1>
         <button id="play-button">Play Game</button>
-        <p class="start-subtext">For the best experience, play in landscape mode.</p>
+        <p class="start-subtext">© David Weinzierl 2025</p>
     </div>
 
     <!-- Rotation Warning Overlay (No changes here) -->
